# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  parsers.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/: cli.py
hexlet_code/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: diff_result.txt  show_result.txt
