[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "show diff"
authors = ["Temirlan <bamblebee988@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
